--- a/Basic/borrow.kv
+++ b/Basic/borrow.kv
@@ -22,3 +22,10 @@
         size_hint: .2, .1
         pos_hint: {'x': .66, 'y': .2}
         on_press: root.capture()
+    
+    ZhBtn:
+        text: '取消'
+        font_size: 50
+        size_hint: .2, .1
+        pos_hint: {'x': .33, 'y': .2}
+        on_press: root.cancel()
