--- a/Basic/borrow.kv
+++ b/Basic/borrow.kv
@@ -17,7 +17,7 @@
         
 
     ZhBtn:
-        text: '确认借出'
+        text: '确认'
         font_size: 50
         size_hint: .2, .1
         pos_hint: {'x': .66, 'y': .2}
